--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rachel Vorcaro Portfolio</title>
-    <link href="style.css" type="text/css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
    <header class="nav">
     <div class="logo">
-        <img src="../UX_UI_HW_17/Images/Logo.png" alt="Logo">
+        <img src="Images/Logo.png" alt="Logo">
     </div>
     <nav class="inline-block">
         <ul>
@@ -23,7 +23,7 @@
    </header>
    <section class="heroImg">
     <div class="content">
-        <img src="../UX_UI_HW_17/Images/Rachel.jfif" alt="Profile">
+        <img src="Images/Rachel.jfif" alt="Profile">
         <p>Hi, I am Rachel Vorcaro, UX/UI designer certified by UofT Bootcamp. 
             My goal is create cut-edging designs focus on the user usability and functionality</p>
         <button>Download Resume</button>    
