Imgs width/height Adjustment

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
    <header class="nav">
     <div class="logo">
-        <img src="Images/Logo.png" alt="Logo">
+        <img class="imglogo" src="Images/Logo.png" alt="Logo">
     </div>
     <nav class="inline-block">
         <ul>
